--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "^0.63.3",
-    "react-native-dotenv": "^2.4.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-localize": "^1.4.3",
     "react-native-safe-area-context": "^3.1.8",
@@ -26,7 +25,7 @@
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.1",
     "react-redux": "^7.2.2",
-    "reanimated": "0.0.1-alpha",
+    "reanimated": "^0.0.1-alpha",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
