--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.1",
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
     "@reduxjs/toolkit": "^1.4.0",
@@ -22,6 +23,7 @@
     "react-native-localize": "^1.4.3",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.14.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.1",
     "react-redux": "^7.2.2",
