--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.1",
+    "@react-navigation/material-bottom-tabs": "^5.3.9",
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
     "@reduxjs/toolkit": "^1.4.0",
@@ -21,6 +22,7 @@
     "react-native": "^0.63.3",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-localize": "^1.4.3",
+    "react-native-paper": "^4.4.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.14.0",
     "react-native-vector-icons": "^7.1.0",
